--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-sass": "^4.9.0",
     "parcel-bundler": "^1.8.1",
     "prop-types": "^15.6.1",
+    "qrious": "^4.0.2",
     "react": "^16.3.2",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.3.2",
