--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react-app": "^3.1.0",
+    "babel-preset-stage-2": "^6.24.1",
     "bootstrap": "^4.1.1",
     "chart.js": "^2.7.2",
     "datamaps": "^0.5.8",
